Update file explorer multifolder colors with maxwidth and fix file icon missing color bug.

--- a/src/left-split-views.scss/file-explorer.scss
+++ b/src/left-split-views.scss/file-explorer.scss
@@ -14,3 +14,35 @@
 .nav-files-container .tree-item.nav-folder {
   background: rgba(0, 0, 0, 0.6);
 }
+
+// .workspace-split.mod-horizontal.mod-right-split .workspace-tabs > .workspace-tab-header-container >
+// .workspace-tab-header-container-inner .workspace-tab-header-inner-icon > svg.svg-icon {
+
+//   stroke-width: 3px;
+//   color: var(--material-color-orange-900);
+// } 
+/* fix for missing nw icons when app refocuses on icon clicks */
+.workspace-tabs.mod-top.mod-top-left-space .workspace-tab-header-container-inner .workspace-tab-header .workspace-tab-header-inner .workspace-tab-header-inner-icon > svg.svg-icon {
+  stroke-width: 3px;
+  color: shared.$material-color-orange-500;
+} 
+
+// .workspace-tabs.mod-top.mod-top-left-space .workspace-tab-header-container-inner .workspace-tab-header .workspace-tab-header-inner .workspace-tab-header-inner-icon:hover > svg.svg-icon {
+//   stroke-width: 3px;
+//   color: shared.$material-color-red-a200;
+// } 
+
+.workspace-split.mod-horizontal.mod-right-split .workspace-tabs > .workspace-tab-header-container >
+.workspace-tab-header-container-inner .workspace-tab-header-inner-icon:hover > svg.svg-icon {
+
+  stroke-width: 3px;
+  color: shared.$material-color-red-a200;
+} 
+.workspace-tabs.mod-top.mod-top-left-space .workspace-tab-header-container-inner .workspace-tab-header.is-active .workspace-tab-header-inner .workspace-tab-header-inner-icon > svg.svg-icon {
+  stroke-width: 3px;
+  color: shared.$material-color-red-a200;
+} 
+
+.workspace .nav-files-container .nav-folder:has(.nav-folder-title[data-path^=_]) {
+  display: none !important;
+}
